# estacionamento

./: .gitignore  pyproject.toml
sql/: main.sql
src/: app.py  models.py  swagger.yaml
src/controllers/: __init__.py  car_controller.py  occupation_controller.py  slot_controller.py  user_controller.py
src/models/: user.py
src/services/: security.py  token.py  verify_route.py
src/static/: openapi.yaml
src/templates/front/login/: index.html
src/templates/front/occupation/: index.html
src/templates/swagger/: index.html
src/views/: __init__.py  front_view.py  main_view.py  swagger_view.py  user_view.py
